--- a/src/GameEngine.Core/GameEngine.Core.csproj
+++ b/src/GameEngine.Core/GameEngine.Core.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Direction.cs" />
     <Compile Include="GameGrid.cs" />
     <Compile Include="GameProcess.cs" />
+    <Compile Include="GameState.cs" />
     <Compile Include="IGameController.cs" />
     <Compile Include="IInputObserver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
