--- a/src/Game/packages.config
+++ b/src/Game/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="wp80" />
+  <package id="Yandex.Metrica" version="1.0.5050.55" targetFramework="wp80" />
+  <package id="Zlib.Portable" version="1.9.2" targetFramework="wp80" />
 </packages>
