--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -95,6 +95,7 @@
     </Compile>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Lifecicle\Configuration.cs" />
+    <Compile Include="Lifecicle\StatisticsManager.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
