descriptions, link to original game, title for main page, tile font sized updated

--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -113,6 +113,7 @@
     <Compile Include="View\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\AboutPageController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
