--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -101,6 +101,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Process\AnimationFactory.cs" />
+    <Compile Include="Process\CellFactory.cs" />
     <Compile Include="Process\InputObserver.cs" />
     <Compile Include="Process\GameScreenController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -157,6 +158,7 @@
     <Content Include="Assets\arrow-right-01.png" />
     <Content Include="Assets\arrow-left-01.png" />
     <Content Include="Assets\arrow-down-01.png" />
+    <Content Include="Assets\Cat.jpg" />
     <Content Include="Assets\refresh.png" />
     <Content Include="Assets\AlignmentGrid.png" />
     <Content Include="Assets\ApplicationIcon.png">
@@ -201,6 +203,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="JeffWilcox.PhoneThemeManager">
+      <HintPath>..\packages\PhoneThemeManager.2.0\lib\windowsphone8\JeffWilcox.PhoneThemeManager.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Phone.Controls.Toolkit">
       <HintPath>..\packages\WPtoolkit.4.2013.08.16\lib\wp8\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
     </Reference>
