--- a/src/Game/packages.config
+++ b/src/Game/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="wp80" />
+  <package id="PhoneThemeManager" version="2.0" targetFramework="wp80" />
   <package id="RateMyApp" version="1.1.0" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
   <package id="Yandex.Metrica" version="1.0.5050.55" targetFramework="wp80" />
