--- a/src/Game/packages.config
+++ b/src/Game/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Coding4Fun.Toolkit.Controls" version="2.0.7" targetFramework="wp80" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="wp80" />
   <package id="PhoneThemeManager" version="2.0" targetFramework="wp80" />
   <package id="RateMyApp" version="1.1.0" targetFramework="wp80" />
