--- a/src/GameEngine.Core/GameEngine.Core.csproj
+++ b/src/GameEngine.Core/GameEngine.Core.csproj
@@ -37,12 +37,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Direction.cs" />
+    <Compile Include="FarthestPosition.cs" />
     <Compile Include="GameGrid.cs" />
     <Compile Include="GameProcess.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="IGameController.cs" />
     <Compile Include="IInputObserver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Traversals.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
