other apps list added

--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -176,6 +176,7 @@
     <Content Include="Assets\arrow-down-01.png" />
     <Content Include="Assets\Cat.jpg" />
     <Content Include="Assets\leaderboard.png" />
+    <Content Include="Assets\OtherApps\Pinholder.png" />
     <Content Include="Assets\refresh.png" />
     <Content Include="Assets\AlignmentGrid.png" />
     <Content Include="Assets\ApplicationIcon.png">
